2011-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: get_splitting_args_from_config() always
	  return 'allow_split', get_xfer_dest() take a allow_split param,
	  set $self->{'allow_split'}, Abort a dump on EOM if splitting is
	  not allowed.
	* perl/Amanda/Taper/Worker.pm: Do not set can_cache_inform if splitting
	  is not allowed.
	* installcheck/Amanda_Taper_Scribe.pl: Fix for previous change.
	* installcheck/taper.pl: Test that dump are aborted on EOM.

2011-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Jan Görig
	* server-src/amrestore.pl: Allow to go to next file with -p.

2011-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: "%lld" do not works with perl-5.6.

2011-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Parse 'bytes' in reply.

2011-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix taperalog *FIT no going to second volume.

2011-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: print 'bytes' with 64 bits type.

2011-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: kb must be integer.

2011-01-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheckdump.pl: Do not quit the clerk if it is not defined

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix driver doing nothing if taper crash early.

2011-01-20  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amservice.8.xml: typo, </programlisting> must be at
	  the beginning of a line.

2011-01-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Do not report error if a dle is listed twice
	  in argument list.
	* installcheck/amadmin.pl: Test it.

2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndma_tape_simulator.c: Use full_read.
	* ndmp-src/ndma_tape.c: Use ndmchan_n_avail_record to guarantee space