@@ -1,3 +1,7 @@
+2011-02-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: flush even if flush threshold are not met if
+	  it save tape space.
+
 2011-02-03  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Taper/Scribe.pm: get_splitting_args_from_config() always
 	  return 'allow_split', get_xfer_dest() take a allow_split param,
